@@ -34,8 +34,8 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function setUp()
     {
-        $this->refClass1 = new ReflectionClass('org\\stubbles\\test\\lang\\reflect\\TestWithMethodsAndProperties');
-        $this->refClass2 = new ReflectionClass('org\\stubbles\\test\\lang\\reflect\\TestWithoutMethodsAndProperties');
+        $this->refClass1 = ReflectionClass::forName('org\stubbles\test\lang\reflect\TestWithMethodsAndProperties');
+        $this->refClass2 = ReflectionClass::forName('org\stubbles\test\lang\reflect\TestWithoutMethodsAndProperties');
     }
 
     /**
@@ -52,7 +52,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function reflectionClassIsEqualToAnotherInstanceForSameReflectedClass()
     {
-        $refClass = new ReflectionClass('org\\stubbles\\test\\lang\\reflect\\TestWithMethodsAndProperties');
+        $refClass = ReflectionClass::forName('org\stubbles\test\lang\reflect\TestWithMethodsAndProperties');
         $this->assertTrue($this->refClass1->equals($refClass));
         $this->assertTrue($refClass->equals($this->refClass1));
     }
@@ -72,10 +72,10 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function toStringReturnsStringRepresentationWithClassNameOfReflectedClass()
     {
-        $this->assertEquals("net\\stubbles\\lang\\reflect\\ReflectionClass[org\\stubbles\\test\\lang\\reflect\\TestWithMethodsAndProperties] {\n}\n",
+        $this->assertEquals("net\stubbles\lang\\reflect\ReflectionClass[org\stubbles\\test\lang\\reflect\TestWithMethodsAndProperties] {\n}\n",
                             (string) $this->refClass1
         );
-        $this->assertEquals("net\\stubbles\\lang\\reflect\\ReflectionClass[org\\stubbles\\test\\lang\\reflect\\TestWithOutMethodsAndProperties] {\n}\n",
+        $this->assertEquals("net\stubbles\lang\\reflect\ReflectionClass[org\stubbles\\test\lang\\reflect\TestWithOutMethodsAndProperties] {\n}\n",
                             (string) $this->refClass2
         );
     }
@@ -94,7 +94,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
     public function getConstructorReturnsReflectionMethodForExistingConstructor()
     {
         $refMethod = $this->refClass1->getConstructor();
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionMethod',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionMethod',
                                 $refMethod
         );
         $this->assertEquals('__construct', $refMethod->getName());
@@ -114,7 +114,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
     public function getMethodReturnsReflectionMethodForExistingMethod()
     {
         $refMethod = $this->refClass1->getMethod('methodA');
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionMethod',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionMethod',
                                 $refMethod
         );
         $this->assertEquals('methodA', $refMethod->getName());
@@ -136,7 +136,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
         $refMethods = $this->refClass1->getMethods();
         $this->assertEquals(4, count($refMethods));
         foreach ($refMethods as $refMethod) {
-            $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionMethod',
+            $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionMethod',
                                     $refMethod
             );
         }
@@ -150,7 +150,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
         $refMethods = $this->refClass1->getMethods(\ReflectionMethod::IS_PUBLIC);
         $this->assertEquals(2, count($refMethods));
         foreach ($refMethods as $refMethod) {
-            $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionMethod',
+            $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionMethod',
                                     $refMethod
             );
         }
@@ -161,7 +161,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function getMethodsByMatcherReturnsListOfReflectionMethodForMatchingMethods()
     {
-        $mockMethodMatcher = $this->getMock('net\\stubbles\\lang\\reflect\\matcher\\MethodMatcher');
+        $mockMethodMatcher = $this->getMock('net\stubbles\lang\reflect\matcher\MethodMatcher');
         $mockMethodMatcher->expects($this->exactly(4))
                           ->method('matchesMethod')
                           ->will($this->onConsecutiveCalls(true, true, false, false));
@@ -170,7 +170,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
                           ->will($this->onConsecutiveCalls(false, true));
         $refMethods = $this->refClass1->getMethodsByMatcher($mockMethodMatcher);
         $this->assertEquals(1, count($refMethods));
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionMethod',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionMethod',
                                 $refMethods[0]
         );
     }
@@ -189,7 +189,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
     public function getPropertyReturnsReflectionPropertyForExistingProperty()
     {
         $refProperty = $this->refClass1->getProperty('property1');
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionProperty',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionProperty',
                                 $refProperty
         );
         $this->assertEquals('property1', $refProperty->getName());
@@ -211,7 +211,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
         $refProperties = $this->refClass1->getProperties();
         $this->assertEquals(3, count($refProperties));
         foreach ($refProperties as $refProperty) {
-            $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionProperty',
+            $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionProperty',
                                     $refProperty
             );
         }
@@ -225,7 +225,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
         $refProperties = $this->refClass1->getProperties(\ReflectionProperty::IS_PUBLIC);
         $this->assertEquals(1, count($refProperties));
         foreach ($refProperties as $refProperty) {
-            $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionProperty',
+            $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionProperty',
                                     $refProperty
             );
         }
@@ -236,7 +236,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function getPropertiesByMatcherReturnsListOfReflectionPropertyForMatchingProperties()
     {
-        $mockPropertyMatcher = $this->getMock('net\\stubbles\\lang\\reflect\\matcher\\PropertyMatcher');
+        $mockPropertyMatcher = $this->getMock('net\stubbles\lang\reflect\matcher\PropertyMatcher');
         $mockPropertyMatcher->expects($this->exactly(3))
                             ->method('matchesProperty')
                             ->will($this->onConsecutiveCalls(true, false, true));
@@ -245,7 +245,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
                             ->will($this->onConsecutiveCalls(true, false));
         $refProperties = $this->refClass1->getPropertiesByMatcher($mockPropertyMatcher);
         $this->assertEquals(1, count($refProperties));
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionProperty',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionProperty',
                                 $refProperties[0]
         );
     }
@@ -266,10 +266,10 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
         $refClasses = $this->refClass1->getInterfaces();
         $this->assertEquals(1, count($refClasses));
         foreach ($refClasses as $refClass) {
-            $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionClass',
+            $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionClass',
                                     $refClass
             );
-            $this->assertEquals('org\\stubbles\\test\\lang\\reflect\\TestInterface',
+            $this->assertEquals('org\stubbles\test\lang\reflect\TestInterface',
                                 $refClass->getName()
             );
         }
@@ -289,10 +289,10 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
     public function getParentClassReturnsReflectionClassInstanceForParentClass()
     {
         $refClass = $this->refClass1->getParentClass();
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionClass',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionClass',
                                 $refClass
         );
-        $this->assertEquals('org\\stubbles\\test\\lang\\reflect\\TestWithOutMethodsAndProperties',
+        $this->assertEquals('org\stubbles\test\lang\reflect\TestWithOutMethodsAndProperties',
                             $refClass->getName()
         );
     }
@@ -310,8 +310,8 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function getExtensionReturnsReflectionExtensionIfClassIsPartOfAnExtension()
     {
-        $refClass = new ReflectionClass('\ArrayIterator');
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\ReflectionExtension',
+        $refClass = ReflectionClass::forName('\ArrayIterator');
+        $this->assertInstanceOf('net\stubbles\lang\reflect\ReflectionExtension',
                                 $refClass->getExtension()
         );
     }
@@ -362,7 +362,7 @@ class ReflectionClassTestCase extends \PHPUnit_Framework_TestCase
      */
     public function getAnnotationReturnsInstanceOfAnnotationIfAnnotationSet()
     {
-        $this->assertInstanceOf('net\\stubbles\\lang\\reflect\\annotation\\Annotation',
+        $this->assertInstanceOf('net\stubbles\lang\reflect\annotation\Annotation',
                                 $this->refClass2->getAnnotation('SomeAnnotation')
         );
     }
