@@ -16,6 +16,9 @@ BC breaks:
   any such entries in your composer.json.
 - Removed package net\stubbles\cache, doesn't belong into core
 
+Other changes:
+- added ReflectionClass::forName()
+
 
 2.1.3, 2012-12-28
 ==================
